--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest package="com.example.smartcanteen" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.DigitalCanteenOrder">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+        android:theme="@style/Theme.SmartCanteen">
+        <activity android:name=".activities.SplashActivity" android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-    </application>
+        <activity android:name=".activities.LoginActivity"/>
+        <activity android:name=".activities.RegisterActivity"/>
+        <activity android:name=".activities.HomeActivity"/>
+        <activity android:name=".activities.MenuActivity"/>
+        <activity android:name=".activities.ItemDetailActivity"/>
+        <activity android:name=".activities.CartActivity"/>
+        <activity android:name=".activities.OrderHistoryActivity"/>
+        <activity android:name=".activities.ProfileActivity"/>
+        <activity android:name=".activities.AdminDashboardActivity"/>
+        <activity android:name=".activities.ManageMenuActivity"/>
+        <activity android:name=".activities.ManageOrdersActivity"/>
+        <activity android:name=".activities.AddItemActivity"/>
+        <activity android:name=".activities.MainActivity"/>
 
+    </application>
 </manifest>
